examples/fail/boolop_and_requires_bool.hax
module Example::BoolOpAndRequiresBool;

pub sub main() -> Void {
  var Int $x = 1;
  var Bool $b = $x and true;
  return;
}
